# scrape-results-playwright

./: pyproject.toml  records.csv  scrape-results.py
.github/workflows/: main.yml
data/: README.md  records.csv
